# Simple-Netlist-Viewer

./: README.md
cells/: halfadder.xml
src/: Box.cpp  Box.h  CMakeLists.txt  Cell.cpp  Cell.h  CellViewer.cpp  CellViewer.h  CellWidget.cpp  CellWidget.h  CellsLib.cpp  CellsLib.h  CellsModel.cpp  CellsModel.h  Indentation.cpp  Indentation.h  Instance.cpp  Instance.h  InstancesModel.cpp  InstancesModel.h  InstancesWidget.cpp  InstancesWidget.h  Line.cpp  Line.h  Main.cpp  Net.cpp  Net.h  Node.cpp  Node.h  OpenCellDialog.cpp  OpenCellDialog.h  Point.h  SaveCellDialog.cpp  SaveCellDialog.h  Shape.cpp  Shape.h  Symbol.cpp  Symbol.h  Term.cpp  Term.h  XmlUtil.cpp  (+1 more)
